--- a/how-to-guide.org
+++ b/how-to-guide.org
@@ -129,6 +129,7 @@ add_subdirectory("python")
 Now, the python bindings will be built alongside your project.
 ** General
 *** Contribute to someone else's project
+
 Having a common software repository helps us to share and use code from other members, but also contribute to them. This implies obtaining the source code (and not the compiled binaries or the conda package) from Github and commit the changes. Obviously, commiting changes comports a risk of introducing bug or unwanted features for the software. You should therefore commit your changes in a separate branch and open a pull request. After inspection, your changes will eventually be accepted and incorporated into the main branch. 
 Let us now describe this procedure step by step.
 
@@ -140,27 +141,27 @@ cd ~/projects/recast3d/
 
 Change something:
 #+BEGIN_SRC bash
-touch atoha
+touch some_file_to_add
 #+END_SRC
 
 Stage file:
 #+BEGIN_SRC bash
-git add atoha
+git add some_file_to_add
 #+END_SRC
 
 #+BEGIN_SRC bash
-git checkout -b henribranch
+git checkout -b reverse_polarity
 #+END_SRC
 
 #+BEGIN_SRC bash
-git commit -m "For Henri"
+git commit -m "Reverse the polarity of neutron flow"
 #+END_SRC
 
 #+BEGIN_SRC bash
-git push origin henribranch
+git push origin reverse_neutron_flow
 #+END_SRC
 
-Visit the project page on GitHub, and in the tab "pull request" click on "New pull request". For more information about pull requests, see https://help.github.com/articles/about-pull-requests/.
+Visit the project page on GitHub, and in the tab /Pull requests/ click on /New pull request/. For more information about pull requests, see https://help.github.com/articles/about-pull-requests/.
 
 
 *** TODO Write good documentation
